PWCT Project/First Generation/Applications/Projects/HarbourPWCT_SupernovaProgrammingLanguage/Samples/Errors/DataExpr2.nova
Application title = Error.

I want window and window title from (5.
